broken CSS fix

--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,10 @@ body {
 
 #content {      /* content container */
     min-height: 100%;
-    margin: 60px auto;
+    margin: 0px auto;
     width: 70%;
     position: relative;
-    padding-bottom: 60px; /* height of footer */
+    padding-bottom: 80px; /* height of footer */
 }
 
 #footer {       /* footer at the borrom of the page */
@@ -30,7 +30,7 @@ body {
     width: 100%;
     height: 60px;
     border-top: 1px solid #d5d5d5;
-    padding: 10px 5%;
+    padding: 20px 5% 0px;
     font-size: .8em;
 }
 
